# GGEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
designer/: CMakeLists.txt  README.md  main.cpp
designer/data/ui/: GG MainWindow.ui  GG NewProjectDialog.ui
designer/forms/: MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h
designer/uic/: BaseUi.h  MainWindowUi.cpp  MainWindowUi.h  NewProjectDialogUi.cpp  NewProjectDialogUi.h
headers/: all.h  components.h  core.h  data.h  declarations.h  errors.h  events.h  gameobjects.h  processor.h  scenes.h
parser/: README.md  convert.py  example.gg  example.txt  language_rule.py  language_rules.py  parse.py
sources/: components.cpp  core.cpp  data.cpp  errors.cpp  events.cpp  gameobjects.cpp  processor.cpp  scenes.cpp
src/: datacore.rs  gamecore.rs  ggengine.rs  graphicscore.rs  lib.rs  mathcore.rs  utils.rs
src/datacore/: assets.rs  audio.rs  fonts.rs  images.rs  prelude.rs
src/gamecore/: components.rs  entities.rs  events.rs  gameobjects.rs  identifiers.rs  querying.rs  resources.rs  scenes.rs  storages.rs  systems.rs
src/gamecore/ggengine_proc_macros/: Cargo.toml
src/gamecore/ggengine_proc_macros/src/: lib.rs
src/gamecore/querying/: component_query.rs  event_query.rs  resource_query.rs  system_query.rs
src/gamecore/storages/: component_storage.rs  entity_component_storage.rs  event_storage.rs  resource_storage.rs  system_storage.rs
src/gamecore/systems/: querying.rs
src/graphicscore/: drawing.rs  ext.rs  primitives.rs  textures.rs
src/mathcore/: collisions.rs  ext.rs  floats.rs  matrices.rs  prelude.rs  primitives.rs  shapes.rs  transforms.rs  vectors.rs
